--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "browserify": "^17.0.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "scripts": {
+    "build": "webpack"
   }
 }
